# gnn-oversquashing-analysis

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
data/: __init__.py  tree_dataset.py
models/: __init__.py  baselines.py  virtual_node.py
results/: base_models_epochs.csv  base_models_summary.csv  virtual_node_models_epochs.csv  virtual_node_models_summary.csv
utils/: plotting.py
