[project]
name = "gnn-oversquashing-analysis"
version = "0.1.0"
description = "Evaluating over-squashing in GNNs using the Tree-NeighborsMatch benchmark"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torch-geometric>=2.4.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "isort>=5.13.0",
]

# ── uv: route torch/torchvision through the PyTorch CPU wheel index ───────────
# Change "cpu" → "cu121" (or your CUDA version) if you have a GPU.
[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
